syntax = "proto3";
option go_package = ".;proto";

import "ttype.proto";

message SmsApiSaveRequest {
    string provider = 1;
    SSmsApi api = 2;
}

message BoardHookSaveRequest {
    string hookURL = 1;
    string token = 2;
}

// 基础服务
service FoundationService {
    /** 获取短信API凭据, provider 短信服务商, 默认:http */
    rpc GetSmsApi (String) returns (SSmsApi) {
    }
    /** 保存短信API凭据,@provider 短信服务商, 默认:http */
    rpc SaveSmsApi (SmsApiSaveRequest) returns (Result) {
    }
    /** 保存面板HOOK数据,这通常是在第三方应用中初始化或调用,参见文档：BoardHooks */
    rpc SaveBoardHook (BoardHookSaveRequest) returns (Result) {
    }

    // 格式化资源地址并返回
    rpc ResourceUrl (String) returns (String) {
    }
    // 设置键值
    //rpc SetValue (Pair) returns (Result){}
    // 删除值,key
    //rpc DeleteValue (String) returns (Result){}
    // 根据前缀获取值,prefix
    //rpc GetValuesByPrefix (String) returns (StringMap){}
    // 注册单点登录应用,返回值：
    //   -  1. 成功，并返回token
    //   - -1. 接口地址不正确
    //   - -2. 已经注册
    rpc RegisterApp (SSsoApp) returns (String) {
    }
    // 获取应用信息,name
    rpc GetApp (String) returns (SSsoApp) {
    }
    // 获取单点登录应用
    rpc GetAllSsoApp (Empty) returns (StringListResponse) {
    }
    // 验证超级用户账号和密码
    rpc SuperValidate (UserPwd) returns (Bool) {
    }
    // 保存超级用户账号和密码
    rpc FlushSuperPwd (UserPwd) returns (Empty) {
    }
    // 创建同步登录的地址,returnUrl
    rpc GetSyncLoginUrl (String) returns (String) {
    }
    // 获取地区名称
    rpc GetAreaNames (GetAreaNamesRequest) returns (StringListResponse) {
    }
    // 获取下级区域,code
    rpc GetChildAreas (Int32) returns (AreaListResponse) {
    }
}

message AreaListResponse {
    repeated SArea Value = 1;
}
message StringListResponse {
    repeated string Value = 1;
}
message GetAreaNamesRequest {
    repeated sint32 Value = 1;
}

message UserPwd {
    string user = 1;
    string pwd = 2;
}

// 单点登录应用
message SSsoApp {
    // 编号
    sint32 ID = 1;
    // 应用名称
    string Name = 2;
    // API地址
    string ApiUrl = 3;
    // 密钥
    string Token = 4;
}

/** 行政区域 */
message SArea {
    sint32 Code = 1;
    sint32 Parent = 2;
    string Name = 3;
}

/** 短信接口信息 */
message SSmsApi {
    /** 接口地址 */
    string ApiUrl = 1;
    /** 接口KEY */
    string Key = 2;
    /** 接口密钥 */
    string Secret = 3;
    /** 请求数据,如: phone={phone}&content={content}*/
    string Params = 4;
    /** 请求方式, GET或POST */
    string Method = 5;
    /** 编码 */
    string Charset = 6;
    /** 签名 */
    string Signature = 7;
    /** 发送成功，包含的字符，用于检测是否发送成功 */
    string SuccessChar = 8;
}
